# hps-analysis

./: CMakeLists.txt  README.md  make_mini_dst.cxx
BaseAna/: BaseAna.cpp  BaseAna_LinkDef.h  Cluster.h  GblStripData.cxx  HpsEvent.cxx  HpsMCParticle.cxx  HpsParticle.cxx  LegacyGblTrack.h  MCParticle.h
BumpHunt2016/: CMakeLists.txt
BumpHunt2016/BumpHunt2016/: BumpHunt2016.h  CMakeLists.txt
BumpHunt2016/Scripts/: helper_functions.C
BumpHunt2016/exec/: CMakeLists.txt  runbumphunt.cpp
Dst2016/: CMakeLists.txt  Dst2016.cxx  Dst2016.h  Dst2016LinkDef.h
EventMixer/: CMakeLists.txt  make_mixed_dst.cxx
EventMixer/GammaMixer/: CMakeLists.txt  GammaMixer.cpp  GammaMixer.cxx  GammaMixer.h
EventMixer/MollerMixer/: MollerMixer.cxx  MollerMixer.h  MollerMixerLinkDef.h
Examples/BumpHunt2016/BumpHunt2016/: BumpHunt2016.cxx  BumpHunt2016.h  BumpHunt2016LinkDef.h  CMakeLists.txt  FilterStore.h
Examples/BumpHunt2016/exec/: CMakeLists.txt
Examples/EventMixer/GammaMixer/: CMakeLists.txt  GammaMixer.h  GammaMixerLinkDef.h
Examples/EventMixer/MollerMixer/: CMakeLists.txt
Examples/Moller/: CMakeLists.txt
Examples/Moller/Moller/: Moller.cxx  Moller.h
Examples/Utilities/: CMakeLists.txt  HPSMagField.cxx  Utilities.cxx  Utilities.h
LcioReader/: CMakeLists.txt  LcioReader.cxx  LcioReader.h  LcioReaderLinkDef.h
MiniDst/: CMakeLists.txt  MiniDst.cxx  MiniDst.h  MiniDstLinkDef.h  README.md  lcio_test_reader.cpp  make_mini_dst.cxx  make_select_mini_dst.py
MiniDst/BaseAna/: BaseAna.h  CMakeLists.txt  CalorimeterHit.h  FEESelector.h  GblStripData.h  GblTrack.h  GblTrackData.h  HpsEventLinkDef.h  HpsMCParticle.h  HpsParticle.h  MuonCluster.h  SvtHit.h  SvtTrack.cxx  TriggerData.cxx
MiniDst/Dst2016/: CMakeLists.txt  Dst2016.cxx  Dst2016.h  README.md
MiniDst/Examples/: Simple_event_loop_example.ipynb
MiniDst/Hbooker/: CMakeLists.txt  Hbooker.cxx  Hbooker.h  HbookerLinkDef.h  make_hbook_dst.cxx
MiniDst/HpstrReader/: CMakeLists.txt  HpstrReader.cxx  HpstrReader.h  HpstrReaderLinkDef.h
MiniDst/LcioReader/: CMakeLists.txt  LcioReader.cxx  LcioReader.h
MiniDst/MiniDst/: CMakeLists.txt  MiniDst.cxx  MiniDst.h  MiniDstLinkDef.h
MiniDst/Obsolete/BaseAna/: BaseAna.cpp  CMakeLists.txt  Counter.cpp  Counter.h  EcalCluster.cxx  EcalCluster.h  EcalHit.cxx  EcalHit.h  FEESelector.cpp  GblTrack.cxx  GblTrackData.cxx  HpsEvent.h  LegacyGblTrack.cxx  MCParticle.cxx  MuonCluster.cxx  README.md  SvtHit.cxx  SvtTrack.h  TriggerData.h
MiniDst/Obsolete/Dst2016/: CMakeLists.txt  Dst2016.h  Dst2016LinkDef.h
MiniDst/cmake/: FindCERNLIB.cmake  FindHPSTR.cmake
MiniDst/lcio/: CMakeLists.txt  LCIOConfig.cmake  LCIOConfigVersion.cmake  pom.xml
MiniDst/lcio/include/EVENT/: LCCollection.h  LCEvent.h
MiniDst/lcio/include/IMPL/: LCEventImpl.h  ParticleIDImpl.h
MiniDst/lcio/include/IO/: LCReader.h
MiniDst/lcio/include/UTIL/: LCSplitWriter.h  LCStdHepRdrNew.h  lXDR.hh
MiniDst/lcio/sio/src/: SIO_stream.cc
MiniDst/lcio/src/cpp/: CMakeLists.txt
MiniDst/lcio/src/cpp/include/IMPL/: AccessChecked.h  LCCollectionVec.h  TrackStateImpl.h
MiniDst/lcio/src/cpp/include/SIO/: LCSIO.h  SIOReader.h  SIOWriter.h
MiniDst/lcio/src/cpp/include/UTIL/: LCSplitWriter.h  LCStdHepRdr.h  lStdHep.hh
MiniDst/lcio/src/cpp/include/pre-generated/EVENT/: TrackState.h
MiniDst/lcio/src/cpp/include/pre-generated/IO/: LCWriter.h
MiniDst/lcio/src/cpp/src/CPPFORT/: lcgob.cc
MiniDst/lcio/src/cpp/src/EXAMPLE/: addRandomAccess.cc  stdhepjob.cc  stdhepjob_new.cc
MiniDst/lcio/src/cpp/src/IMPL/: AccessChecked.cc  LCEventImpl.cc  LCIOExceptionHandler.cc  TrackStateImpl.cc
MiniDst/lcio/src/cpp/src/SIO/: SIOCollectionHandler.cc  SIOReader.cc  SIOTrackHandler.cc  SIOWriter.cc
MiniDst/lcio/src/cpp/src/UTIL/: Operators.cc  lXDR.cc
MiniDst/lcio/src/java/hep/lcio/implementation/event/: ITrackState.java
MiniDst/lcio/src/latex/manual/: manual.tex
MiniDstLib/: CMakeLists.txt  MiniDst.cxx  MiniDst.h  MiniDstLinkDef.h
Moller/: CMakeLists.txt
Moller/Data/: ECalTimeCorrections.root
Moller/Moller/: CMakeLists.txt  Moller.cxx  Moller.h  MollerLinkDef.h
Moller/exec/: CMakeLists.txt  runmoller.cpp
Particles/: CMakeLists.txt  Particles.cxx  Particles.h  ParticlesLinkDef.h
Python/: root_helpers.py
Scripts/: helper_functions.C
Utilities/: CMakeLists.txt  HPSMagField.h  UtilitiesLinkDef.h
