project(Moller)

ROOT_GENERATE_DICTIONARY(MollerDict Moller.h MODULE ${PROJECT_NAME} LINKDEF MollerLinkDef.h )

add_library(${PROJECT_NAME} SHARED Moller.cxx MollerDict.cxx)
target_include_directories(${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>)
target_link_libraries(${PROJECT_NAME} PUBLIC ${ROOT_LIBRARIES})
set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "Moller.h")

install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR} PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCDIR} )
