project(BumpHunt2016)

ROOT_GENERATE_DICTIONARY(BumpHunt2016Dict BumpHunt2016.h MODULE ${PROJECT_NAME} LINKDEF BumpHunt2016LinkDef.h )

add_library(${PROJECT_NAME} SHARED BumpHunt2016.cxx BumpHunt2016Dict.cxx)
target_include_directories(${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>)
target_link_libraries(${PROJECT_NAME} PUBLIC ${ROOT_LIBRARIES})
set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "BumpHunt2016.h")

install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR} PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCDIR} )
